--- a/public/template/footer.html
+++ b/public/template/footer.html
@@ -1,9 +1,7 @@
-Copyright &copy; 2015 Material Admin
+Copyright &copy; 2015 Cory Martin
 
 <ul class="f-menu">
-    <li><a href="">Home</a></li>
-    <li><a href="">Dashboard</a></li>
-    <li><a href="">Reports</a></li>
-    <li><a href="">Support</a></li>
-    <li><a href="">Contact</a></li>
+    <li><a href="/#/">Home</a></li>
+    <li><a href="/#/reports">Reports</a></li>
+    <li><a href="mailto:murribu@gmail.com">Contact</a></li>
 </ul>
