--- a/public/template/header.html
+++ b/public/template/header.html
@@ -8,7 +8,7 @@
     </li>
 
     <li class="logo hidden-xs">
-        <a data-ui-sref="home" data-ng-click="mactrl.sidebarStat($event)">Cory Martin&nbsp;&nbsp;--&nbsp;&nbsp;TruMedia Hackathon entry</a>
+        <a data-ui-sref="home" data-ng-click="mactrl.sidebarStat($event)">Cory Martin&nbsp;&nbsp;--&nbsp;&nbsp;TruMedia Hackathon</a>
     </li>
 
     <li class="pull-right">
