--- a/public/views/reports-catcher-framing.html
+++ b/public/views/reports-catcher-framing.html
@@ -1,1 +1,59 @@
-Catcher Framing Report
+<div class="container" data-ng-controller="reportsCatcherFramingCtrl as rctrl">
+    <div class="card">
+        <div class="card-header">
+            <h2>Customize Your Report</h2>
+        </div>
+        <div class="card-body card-padding">
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="form-group">
+                        <label>Minimum Pitch Count</label>
+                        <div class="fg-line">
+                            <input type="number" class="form-control" ng-model="rctrl.minimumPitchCount">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="form-group">
+                        <label>Player Search</label>
+                        <div class="fg-line">
+                            <input type="text" class="form-control" ng-model="rctrl.playerSearch" placeholder="Posey">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="card">
+        <div class="card-header">
+            <h2>Results</h2>
+        </div>
+        <div class="card-body">
+            <div class="table-responsive">
+                <table class="table table-striped table-vmiddle table-condensed ng-table" show-filter="true">
+                    <thead>
+                        <tr>
+                            <th class="header sortable" ng-click="rctrl.changeSort('name')" ng-class="{'sort-asc': rctrl.currentSort == 'name', 'sort-desc': rctrl.currentSort == '-name'}"><div class="ng-table-header">Name</div></th>
+                            <th class="header sortable" ng-click="rctrl.changeSort('score')" ng-class="{'sort-asc': rctrl.currentSort == 'score', 'sort-desc': rctrl.currentSort == '-score'}"><div class="ng-table-header">Score</div></th>
+                            <th class="header sortable" ng-click="rctrl.changeSort('pitch_count')" ng-class="{'sort-asc': rctrl.currentSort == 'pitch_count', 'sort-desc': rctrl.currentSort == '-pitch_count'}"><div class="ng-table-header">Pitch Count</div></th>
+                        </tr>
+                    </thead>
+                    
+                    <tr ng-repeat="result in rctrl.results | orderBy:rctrl.currentSort | filter:rctrl.filterResults | startFrom:(rctrl.currentPage-1)*rctrl.pageSize | limitTo:rctrl.pageSize">
+                        <td><a href="#/players/{{result.id}}">{{result.name}}</a></td>
+                        <td>{{result.score}}</td>
+                        <td>{{result.pitch_count}}</td>
+                    </tr>
+                    
+                </table>
+                <div class="ng-table-pager">
+                    <ul class="pagination ng-table-pagination">
+                        <li ng-class="{'active' : $index === (rctrl.currentPage-1)*rctrl.pageSize}" ng-repeat="result in rctrl.results | filter:rctrl.filterResults" ng-if="$index % rctrl.pageSize === 0">
+                            <a ng-click="rctrl.changePage(($index / rctrl.pageSize) + 1)" href="">{{($index / rctrl.pageSize) + 1 | number:0}}</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
