--- a/public/template/sidebar-left.html
+++ b/public/template/sidebar-left.html
@@ -12,6 +12,7 @@
 
             <ul>
                 <li><a data-ui-sref-active="active" data-ui-sref="reports.catcher-framing" data-ng-click="mactrl.sidebarStat($event)">Catcher Framing</a></li>
+                <li><a data-ui-sref-active="active" data-ui-sref="reports.velocity-diff" data-ng-click="mactrl.sidebarStat($event)">Pitcher Velocity Difference</a></li>
             </ul>
         </li>
     </ul>
