--- a/public/views/reports-batter-heat-zone.html
+++ b/public/views/reports-batter-heat-zone.html
@@ -6,10 +6,10 @@
         <div class="card-body card-padding">
             <ul class="tab-nav tn-justified" style="margin-bottom: 24px;">
                 <li ng-class="{'active': rctrl.activeTab == 'basic'}" class="btn-wave">
-                    <a ng-click="rctrl.activeTab = 'basic'" href="#/reports/catcher-framing">Basic Filters</a>
+                    <a ng-click="rctrl.activeTab = 'basic'" href="#/reports/heat-zone">Basic Filters</a>
                 </li>
                 <li ng-class="{'active': rctrl.activeTab == 'additional'}" class="btn-wave">
-                    <a ng-click="rctrl.activeTab = 'additional'" href="#/reports/catcher-framing">Additional Filters</a>
+                    <a ng-click="rctrl.activeTab = 'additional'" href="#/reports/heat-zone">Select Player(s)</a>
                 </li>
             </ul>
             <div ng-show="rctrl.activeTab == 'basic'">
@@ -33,74 +33,32 @@
                 </div>
             </div>
             <div ng-show="rctrl.activeTab == 'additional'">
-                <div class="row" style="margin:5px;">
-                    <p class="f-500 c-black m-b-5">Innings</p>
-                    <small class="c-gray">{{ rctrl.additionalFilters.inningMin }} - {{ rctrl.additionalFilters.inningMax }}</small>
-                    <br/>
-                    <br/>
-                    <div style="padding:0px 12px 12px 12px;">
-                        <div slider class="input-slider-range" ng-from="rctrl.additionalFilters.inningMin" ng-to="rctrl.additionalFilters.inningMax" start=1 end=20></div>
-                    </div>
-                </div>
-                <div class="row" style="margin:5px;">
-                    <div class="col-sm-4 checkbox">
-                        <p class="f-500 c-black m-b-5">Man on...</p>
-                        <div class="form-group" title="If checked, the report will include pitches where there was a man on first. If unchecked, it won't care whether there was a man on first.">
-                            <label>First
-                                <input type="checkbox" ng-model="rctrl.additionalFilters.manOnFirst" >
-                                <i class="input-helper"></i>
-                            </label>
-                        </div>
-                        <div class="form-group" title="If checked, the report will include pitches where there was a man on second. If unchecked, it won't care whether there was a man on second.">
-                            <label>Second
-                                <input type="checkbox" ng-model="rctrl.additionalFilters.manOnSecond">
-                                <i class="input-helper"></i>
-                            </label>
-                        </div>
-                        <div class="form-group" title="If checked, the report will include pitches where there was a man on third. If unchecked, it won't care whether there was a man on third.">
-                            <label>Third
-                                <input type="checkbox" ng-model="rctrl.additionalFilters.manOnThird">
-                                <i class="input-helper"></i>
-                            </label>
-                        </div>
-                    </div>
-                    <div class="col-sm-2" style="margin-top:10px;">
-                        <p class="f-500 c-black m-b-5">Outs</p>
-                        <div class="form-group">
-                            <select multiple="true" ng-model="rctrl.additionalFilters.outs" ng-options="n for n in rctrl.range(0,2)" style="width:80px;"></select>
-                        </div>
-                    </div>
-                    <div class="col-sm-2" style="margin-top:10px;">
-                        <p class="f-500 c-black m-b-5">Balls</p>
-                        <div class="form-group">
-                            <select multiple="true" ng-model="rctrl.additionalFilters.balls" ng-options="n for n in rctrl.range(0,3)" style="width:80px;"></select>
-                        </div>
-                    </div>
-                    <div class="col-sm-2" style="margin-top:10px;">
-                        <p class="f-500 c-black m-b-5">Strikes</p>
-                        <div class="form-group">
-                            <select multiple="true" ng-model="rctrl.additionalFilters.strikes" ng-options="n for n in rctrl.range(0,2)" style="width:80px;"></select>
-                        </div>
-                    </div>
-                </div>
                 <div class="row">
-                    <div class="btn btn-primary" style="float:right;" ng-click="rctrl.rerunReport()">Re-run Report</div>
+                    <div class="col-md-3">
+                        Select a pitcher<br><select id="select-pitcher" ng-model="rctrl.additionalFilters.selectedPitcher" style="width:150px"></select>
+                    </div>
+                    <div class="col-md-3">
+                        Select a batter<br>
+                        <select id="select-batter" ng-model="rctrl.additionalFilters.selectedBatter" style="width:150px"></select>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
     <div class="card">
         <div class="card-header">
-            <h2>Batter Heat Zone</h2>
+            <h2>Batter Heat Zone</h2> <small>Results are limited to 400 pitches</small>
         </div>
         <div class="card-body heat-zone-card">
+            <div class="selected-pitcher"></div>
+            <div class="selected-batter"></div>
             <div class="heat-zone-container">
                 <div ng-repeat="n in rctrl.range(0,24)" class="heat-zone-section heat-row-{{Math.floor(n/5)}} heat-col-{{n % 5}}"></div>
-                <div ng-repeat="point in rctrl.dataPoints | filter:filterResults" class="heat-zone-pitch" 
+                <div ng-repeat="point in rctrl.dataPoints | filter:filterResults" class="heat-zone-pitch" ng-class="{'heat-zone-in-play' : point.pa_result_id != '', 'heat-zone-ball' : point.ball == 1, 'heat-zone-strike' : point.strike == 1}"
                 style="
                 top:{{396-(240*((point.y-point.szb)/(point.szt-point.szb)))}}px;
                 left:{{276+(point.x*240*12/17)}}px" 
-                title="{{point.label}}, x={{point.x}}, y={{point.y}}, szt={{point.szt}}, szb={{point.szb}}, distFromBottomOfZone={{(point.y-point.szb)}}, zoneHeightDiv3={{(point.szt-point.szb)/3}}"></div>
+                title="{{point.pitch_desc}} - {{point.pa_desc}}" ng-mouseover="selectedPoint = point"></div>
             </div>
         </div>
     </div>
