--- a/public/views/reports-batter-heat-zone.html
+++ b/public/views/reports-batter-heat-zone.html
@@ -80,7 +80,7 @@
                 <div 
                     ng-repeat="point in rctrl.dataPoints | filter:rctrl.filterResults" 
                     class="heat-zone-pitch" 
-                    ng-class="{'heat-zone-in-play' : point.pa_result_id != '', 'heat-zone-ball' : point.ball == 1, 'heat-zone-strike' : point.strike == 1}"
+                    ng-class="{'heat-zone-in-play' : point.pa_desc != '', 'heat-zone-ball' : point.ball == 1, 'heat-zone-strike' : point.strike == 1}"
                     style="
                     top:{{396-(240*((point.y-point.szb)/(point.szt-point.szb)))}}px;
                     left:{{276+(point.x*240*12/17)}}px" 
